--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pinia/nuxt": "^0.5.1",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
+    "vue-dompurify-html": "^5.0.1",
     "vuetify": "^3.4.0-beta.1"
   }
 }
