--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.0.6",
     "@nuxtjs/google-fonts": "^3.0.2",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
@@ -20,6 +20,7 @@
     "@fancyapps/ui": "^5.0.28",
     "@mdi/font": "^7.3.67",
     "@pinia/nuxt": "^0.5.1",
+    "nuxt-simple-sitemap": "^4.1.17",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
     "vue-dompurify-html": "^5.0.1",
